--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pravallika Personal Website</title>
-  <link rel="stylesheet" href="style (1).css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="sp-favicon.ico">
 </head>
 
